--- a/app/public/friends.html
+++ b/app/public/friends.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Friend Finder</title>
+    <title>FF - Friends</title>
     <link href="https://fonts.googleapis.com/css?family=Black+Han+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Asap|Black+Han+Sans" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/reset.css" />
-    <link rel="stylesheet" href="/assets/css/home.css" />
+    <link rel="stylesheet" href="/assets/css/friends.css" />
     <link rel="shortcut icon" type="image/png"
     href="/assets/images/friendFavicon.png"">
 </head>
 <body>
     <section id="">
        <h1>Friend Finder</h1>
-       <h2>Welcome to Friend Finder!</h2>
+       <h2>Congratulations!</h2>
+       
+       <p> We've found some potential friends for you! </p>
        <hr>
-       <p> Start by taking a survey and providing some information for your profile. We'll use our sophisticated algorithem to help find people you might like in your area!</p>
-       <button type="submit"><a href="./survey.html">Start Survey!</a></button>
+       <div id="profile-friends">
+
+       </div>
     </section>
 
     <footer>
