--- a/app/public/home.html
+++ b/app/public/home.html
@@ -7,10 +7,11 @@
     <title>Friend Finder</title>
     <link href="https://fonts.googleapis.com/css?family=Black+Han+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Asap|Black+Han+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/reset.css" />
-    <link rel="stylesheet" href="/assets/css/home.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/home.css" />
     <link rel="shortcut icon" type="image/png"
     href="/assets/images/friendFavicon.png"">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
     <section id="">
