--- a/app/public/friends.html
+++ b/app/public/friends.html
@@ -1,69 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>FF - Friends</title>
-    <link href="https://fonts.googleapis.com/css?family=Black+Han+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Asap|Black+Han+Sans" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Black+Han+Sans"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Asap|Black+Han+Sans"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/assets/css/reset.css" />
     <link rel="stylesheet" href="/assets/css/friends.css" />
     <link rel="shortcut icon" type="image/png"
     href="/assets/images/friendFavicon.png"">
-</head>
-<body>
+  </head>
+  <body>
     <section id="main">
-       <h1>Friend Finder</h1>
-       <h2>Congratulations!</h2>
-       
-       <p> We've found some potential friends for you! </p>
-       <hr>
-       <section id="profile-friends">
+      <h1>Friend Finder</h1>
+      <h2>Congratulations!</h2>
 
-<div id="tyler">
-    <img src="https://media.licdn.com/dms/image/C4E03AQEvRaqHN5PGxQ/profile-displayphoto-shrink_200_200/0?e=1548892800&v=beta&t=j_LaEkLw9dt8mbZhRSBH0Xr8jDY2eEIZfENi6MZhRJs">
-    <p>Tyler Guthrie</p>
-
-</div>
-
-</section>
+      <p>We've found some potential friends for you!</p>
+      <hr />
+      <section id="profile-friends">
+        <!-- <div id="tyler">
+          <img
+            src="https://media.licdn.com/dms/image/C4E03AQEvRaqHN5PGxQ/profile-displayphoto-shrink_200_200/0?e=1548892800&v=beta&t=j_LaEkLw9dt8mbZhRSBH0Xr8jDY2eEIZfENi6MZhRJs"
+          />
+          <p>Tyler Guthrie</p>
+        </div> -->
+      </section>
     </section>
 
     <footer>
-        <div class="footer-container">
-            <a href="https://github.com/guthriet1230"><img id="github" src="/assets/images/Footer/GithubLogo.png"></a>
-            <a href="https://www.linkedin.com/in/tyler-guthrie-0a608857/"><img id="linkedin" src="/assets/images/Footer/LinkedinLogo.jpg"></a>
-            <a href="mailto:guthriet1230@gmail.com"><img id="gmail" src="/assets/images/Footer/GmailLogo.png"></a>
-        </div>
+      <div class="footer-container">
+        <a href="https://github.com/guthriet1230"
+          ><img id="github" src="/assets/images/Footer/GithubLogo.png"
+        /></a>
+        <a href="https://www.linkedin.com/in/tyler-guthrie-0a608857/"
+          ><img id="linkedin" src="/assets/images/Footer/LinkedinLogo.jpg"
+        /></a>
+        <a href="mailto:guthriet1230@gmail.com"
+          ><img id="gmail" src="/assets/images/Footer/GmailLogo.png"
+        /></a>
+      </div>
     </footer>
 
     <script
-    src="https://code.jquery.com/jquery-3.3.1.js"
-    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
+      src="https://code.jquery.com/jquery-3.3.1.js"
+      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+      crossorigin="anonymous"
+    ></script>
     <script>
-
-    function getProfiles(){
-        $.ajax({ url: "/api/friends", method: "GET" })
-            .then(function(friends) {
-
-
-
-        for(let i=0; i < profileLog.length; i++){
+      function getProfiles() {
+        $.ajax({ url: "/api/friends", method: "GET" }).then(function(friends) {
+            console.log(friends);
+          for (let i = 0; i < friends.length; i++) {
             let profileDisplay = $("<div>");
             let p = $("<p>");
-            p.text("Name: " + profile.name)
-            // let profileImage = $("<img>");
-            // profileImage.attr("src",  );
-            //profileDisplay.append(profileImage);
+            let profileImage = $("<img>");
+            
+            p.text(friends[i].name);
+            profileImage.attr("src", friends[i].photo);
+            profileDisplay.append(profileImage);
             profileDisplay.append(p);
             $("#profile-friends").prepend(profileDisplay);
-        }
-    })
-};
-    getProfiles();
-
+          }
+        });
+      }
+      getProfiles();
     </script>
-</body>
+  </body>
 </html>
